[package]
name = "quiz-gui"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan LOQUET <jonthan.lt@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = { version = "0.33.2", features = ["all_loaders", "image"] }
env_logger = "0.11.8"
image = "0.25.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
